Try to deploy new release

--- a/.github/workflows/dockerhub-release-latest.yml
+++ b/.github/workflows/dockerhub-release-latest.yml
@@ -31,3 +31,12 @@ jobs:
           context: .
           push: true
           tags: skeletondocker/kaznet-status:latest
+      -
+        name: Deploy to Production
+        uses: actions-hub/kubectl@master
+        env:
+          KUBE_HOST: ${{ secrets.KUBE_HOST }}
+          KUBE_CERTIFICATE: ${{ secrets.KUBE_CERTIFICATE }}
+          KUBE_TOKEN: ${{ secrets.KUBE_TOKEN }}
+        with:
+          args: set image deployment/kaznet-status kaznet-status=skeletondocker/kaznet-status:latest -n=kaznet-status-production
