--- a/.github/workflows/dockerhub-release-latest.yml
+++ b/.github/workflows/dockerhub-release-latest.yml
@@ -9,34 +9,38 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
-      -
-        name: Set up QEMU
+
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
+
+      - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      -
-        name: Build and push
+
+      - name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tags: skeletondocker/kaznet-status:latest
-      -
-        name: Deploy to Production
-        uses: actions-hub/kubectl@master
-        env:
-          KUBE_HOST: ${{ secrets.KUBE_HOST }}
-          KUBE_CERTIFICATE: ${{ secrets.KUBE_CERTIFICATE }}
-          KUBE_TOKEN: ${{ secrets.KUBE_TOKEN }}
+          tags: skeletondocker/${{ github.repository }}:main_${{ github.sha }}
+
+      - name: deploy to cluster
+        uses: steebchen/kubectl@v2.0.0
+        with: # defaults to latest kubectl binary version
+          config: ${{ secrets.KUBE_CONFIG_DATA }}
+          command: set image --record deployment/kaznet-status container=${{ github.repository }}:main_${{ github.sha }} --insecure-skip-tls-verify
+          
+      - name: verify deployment
+        uses: steebchen/kubectl@v2.0.0
         with:
-          args: set image deployment/kaznet-status kaznet-status=skeletondocker/kaznet-status:latest -n=kaznet-status-production --insecure-skip-tls-verify
+          config: ${{ secrets.KUBE_CONFIG_DATA }}
+          version: v1.21.0 # specify kubectl binary version explicitly
+          command: rollout status deployment/my-app
+          # args: set image deployment/kaznet-status kaznet-status=skeletondocker/kaznet-status:latest -n=kaznet-status-production --insecure-skip-tls-verify
