--- a/.github/workflows/dockerhub-release-latest.yml
+++ b/.github/workflows/dockerhub-release-latest.yml
@@ -35,11 +35,11 @@ jobs:
         uses: steebchen/kubectl@v2.0.0
         with: # defaults to latest kubectl binary version
           config: ${{ secrets.KUBE_CONFIG_DATA }}
-          command: set image --record deployment/kaznet-status kaznet-status=kaznet-status:main_${{ github.sha }} --insecure-skip-tls-verify
+          command: set image deployment/kaznet-status kaznet-status=kaznet-status:main_${{ github.sha }} --insecure-skip-tls-verify
           
       - name: verify deployment
         uses: steebchen/kubectl@v2.0.0
         with:
           config: ${{ secrets.KUBE_CONFIG_DATA }}
           version: v1.21.0 # specify kubectl binary version explicitly
-          command: rollout status deployment/my-app
+          command: rollout status deployment/kaznet-status
