--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     image: skeletondocker/kaznet-status:latest
     environment:
       TZ: Asia/Almaty
-      TELEGRAM_BOT_TOKEN: 5025688129:AAHnvGRZJxG1d8hi6ErOoN0q1bboJC4V83Q
-      TELEGRAM_BOT_CHAT_ID: -618200858
+      TELEGRAM_BOT_TOKEN: your-bot-token 
+      TELEGRAM_BOT_CHAT_ID: your-chat-id
     restart: unless-stopped
 
     command: kaznet-status
