--- a/.github/workflows/dockerhub-release-staging.yml
+++ b/.github/workflows/dockerhub-release-staging.yml
@@ -1,9 +1,9 @@
-name: Publish Docker image latest
+name: Publish Docker image and deploy staging
 
 on:
   push:
     branches:
-      - 'main'
+      - 'staging'
 
 jobs:
   docker:
@@ -29,17 +29,17 @@ jobs:
         with:
           context: .
           push: true
-          tags: skeletondocker/kaznet-status:main_${{ github.sha }}
+          tags: skeletondocker/kaznet-status:staging_${{ github.sha }}
 
       - name: deploy to cluster
         uses: steebchen/kubectl@v2.0.0
         with: # defaults to latest kubectl binary version
           config: ${{ secrets.KUBE_CONFIG_DATA }}
-          command: set image deployment/kaznet-status kaznet-status=skeletondocker/kaznet-status:main_${{ github.sha }} --insecure-skip-tls-verify
+          command: set image deployment/kaznet-status kaznet-status=skeletondocker/kaznet-status:staging_${{ github.sha }} --insecure-skip-tls-verify
           
       - name: verify deployment
         uses: steebchen/kubectl@v2.0.0
         with:
-          config: ${{ secrets.KUBE_CONFIG_DATA }}
+          config: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
           version: v1.21.0 # specify kubectl binary version explicitly
           command: rollout status deployment/kaznet-status
