--- a/.github/workflows/artefacts-build.yml
+++ b/.github/workflows/artefacts-build.yml
@@ -1,32 +1,32 @@
-name: Build and Test
-on:
-  push:
-    branches:
-      - main
-  pull_request:
+# name: Build and Test
+# on:
+#   push:
+#     branches:
+#       - main
+#   pull_request:
 
-jobs:
+# jobs:
 
-  build_for_linux_arm64:
-    name: Build for Linux
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up Go
-        uses: actions/setup-go@v1
-        with:
-          go-version: 1.17.5
+#   build_for_linux_arm64:
+#     name: Build for Linux
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Set up Go
+#         uses: actions/setup-go@v1
+#         with:
+#           go-version: 1.17.5
 
-      - name: Check out code
-        uses: actions/checkout@v1
+#       - name: Check out code
+#         uses: actions/checkout@v1
 
-      - name: Download modules
-        run: go mod download
+#       - name: Download modules
+#         run: go mod download
 
-      - name: Build
-        run: go build -o kaznet-status
+#       - name: Build
+#         run: go build -o kaznet-status
 
-      - name: Upload dir and bin as artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: kaznet-status_linux_arm64
-          path: .
+#       - name: Upload dir and bin as artifact
+#         uses: actions/upload-artifact@v2
+#         with:
+#           name: kaznet-status_linux_arm64
+#           path: .
