--- a/.github/workflows/dockerhub-release.yml
+++ b/.github/workflows/dockerhub-release.yml
@@ -24,12 +24,19 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push
+      - name: Build and push commit sha
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
           tags: skeletondocker/kaznet-status:main_${{ github.sha }}
+
+      - name: Build and push latest
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: skeletondocker/kaznet-status:latest
 
       - name: deploy to cluster
         uses: steebchen/kubectl@v2.0.0
