--- a/.github/workflows/dockerhub-release-staging.yml
+++ b/.github/workflows/dockerhub-release-staging.yml
@@ -24,18 +24,20 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push
+      - name: Build and push commit sha for arm64
         uses: docker/build-push-action@v2
         with:
           context: .
+          build-args: |
+            GOARCH=arm64
           push: true
-          tags: skeletondocker/kaznet-status:staging_${{ github.sha }}
+          tags: skeletondocker/kaznet-status:staging_arm64_${{ github.sha }}
 
       - name: deploy to cluster
         uses: steebchen/kubectl@v2.0.0
         with: # defaults to latest kubectl binary version
           config: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
-          command: set image deployment/kaznet-status kaznet-status=skeletondocker/kaznet-status:staging_${{ github.sha }} --insecure-skip-tls-verify
+          command: set image deployment/kaznet-status kaznet-status=skeletondocker/kaznet-status:staging_arm64_${{ github.sha }} --insecure-skip-tls-verify
           
       - name: verify deployment
         uses: steebchen/kubectl@v2.0.0
