--- a/.github/workflows/dockerhub-release.yml
+++ b/.github/workflows/dockerhub-release.yml
@@ -24,25 +24,47 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push commit sha
+      - name: Build and push commit sha for amd64
         uses: docker/build-push-action@v2
         with:
           context: .
+          build-args: |
+            GOARCH=amd64
           push: true
           tags: skeletondocker/kaznet-status:main_${{ github.sha }}
 
-      - name: Build and push latest
+      - name: Build and push latest for amd64
         uses: docker/build-push-action@v2
         with:
           context: .
+          build-args: |
+            GOARCH=amd64
           push: true
           tags: skeletondocker/kaznet-status:latest
+
+      - name: Build and push commit sha for arm64
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          build-args: |
+            GOARCH=arm64
+          push: true
+          tags: skeletondocker/kaznet-status:main_arm64_${{ github.sha }}
+
+      - name: Build and push latest for arm64
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          build-args: |
+            GOARCH=arm64
+          push: true
+          tags: skeletondocker/kaznet-status:latest_arm64
 
       - name: deploy to cluster
         uses: steebchen/kubectl@v2.0.0
         with: # defaults to latest kubectl binary version
           config: ${{ secrets.KUBE_CONFIG_DATA }}
-          command: set image deployment/kaznet-status kaznet-status=skeletondocker/kaznet-status:main_${{ github.sha }} --insecure-skip-tls-verify
+          command: set image deployment/kaznet-status kaznet-status=skeletondocker/kaznet-status:main_arm64_${{ github.sha }} --insecure-skip-tls-verify
           
       - name: verify deployment
         uses: steebchen/kubectl@v2.0.0
